--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,5 +33,8 @@
   "icons": {
     "64": "chrome/content/mboximport/import-export-tools-ng-icon-64px.png"
   },
+  "permissions": [
+    "downloads"
+  ],
   "default_locale": "en_US"
 }
